# rost

./: .gitignore  Cargo.toml  README.md  build.rs  kernel.elf  memo.txt
bootloader/: Cargo.toml  memo.txt  run.sh
bootloader/esp/: kernel.elf
bootloader/esp/efi/boot/: bootx64.efi
bootloader/src/: main.rs
common/src/: boot_info.rs  elf.rs
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: allocator.rs  console.rs  display.rs  frame_buffer.rs  framebuffer.rs  gdt.rs  graphics.rs  interrupts.rs  main.rs  memory.rs  paging.rs  process.rs  task.rs  utils.rs  xhci.rs
kernel/src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
kernel/src/process/: scheduler.rs
kernel/src/task/: executor.rs  keyboard.rs  simple_executor.rs
kernel/src/xhci/: contexts.rs  future.rs  registers.rs  rings.rs  trb.rs  volatile.rs
memo/: build.md
src/: main.rs
