[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader_api = "0.11.9"
conquer-once = {version = "0.4.0", default-features = false}
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
linked_list_allocator = "0.10.5"
noto-sans-mono-bitmap = {version = "0.3.1", features = ["size_20", "size_24", "size_32"]}
pc-keyboard = "0.8.0"
spin = "0.9.8"
spinning_top = "0.3.0"
x86_64 = "0.15.2"
